--- a/frontend/src/pages/Glasanje.css
+++ b/frontend/src/pages/Glasanje.css
@@ -190,6 +190,16 @@
   flex: 1; 
 }
 
+.submit-vote-button{
+  margin-top: 10px;
+}
+
+label {
+  font-size: 16px;
+  color: #333;
+  margin-bottom: 5px;
+}
+
 .main-container {
   display: flex;
   flex-direction: column;
