--- a/frontend/src/pages/Main.css
+++ b/frontend/src/pages/Main.css
@@ -214,3 +214,20 @@
 .close-button:hover {
     background-color: #a71d2a;
 }
+
+@media only screen and (max-width: 1000px){
+    .discussion-box{
+        width: 90%;
+    }
+}
+
+@media only screen and (max-width: 700px){
+    .discussions-wrapper{
+        margin: 10px auto;
+    }
+
+    .discussion-box{
+        width: 90%;
+        padding: 10px;
+    }
+}
