--- a/frontend/src/pages/Glasanje.css
+++ b/frontend/src/pages/Glasanje.css
@@ -159,8 +159,8 @@
 
 .navigation-button {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
+  bottom: 10%;
+  right: 3%;
   background-color: #45a049;
   color: white;
   border: none;
