izmjene Main i Header
uređen gumb za sastanke
popravljen header za manje uređaje

--- a/frontend/src/pages/Main.css
+++ b/frontend/src/pages/Main.css
@@ -215,6 +215,10 @@
     background-color: #a71d2a;
 }
 
+.sastanak-button{
+    margin-bottom: 10px;
+}
+
 @media only screen and (max-width: 1000px){
     .discussion-box{
         width: 90%;
